--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <button class="btn" onclick="CalculateSI()">Calculate</button>
                     </div>
                     <div class="row">
-                        <label for="rate" >Simple Interest:  </label>
+                        <label >Simple Interest:  </label>
                     </div>
                     <div class="result mb-4 row"><br>                       
                         <h6 id="si"></h6>
@@ -62,6 +62,9 @@
                     <br>
                     <div class="button row mb-4" >
                         <button class="btn" onclick="CalculateCI()">Calculate</button>
+                    </div>
+                    <div class="row">
+                        <label>Compound Interest:  </label>
                     </div>
                     <div class="result row mb-4"><br>
                         <h6 id="ci"></h6>
